Thread scheme started

--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -1,9 +1,12 @@
 PROGRAM=proxy
 
+CFLAGS=-Wall -Wextra -Wpedantic -Iinc -DDEBUG_MODE
+LDFLAGS=-lpthread
+
 all: ${PROGRAM}
 
-${PROGRAM}: proxy.c
-	gcc proxy.c -o ${PROGRAM}
+${PROGRAM}: src/proxy.c inc/definitions.h
+	gcc ${CFLAGS} src/proxy.c ${LDFLAGS} -o ${PROGRAM}
 
 clean:
 	rm -rf ${PROGRAM}
