url top-level encapsulating function added, add up # max requests

--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -5,8 +5,17 @@ LDFLAGS=-lpthread
 
 all: ${PROGRAM}
 
-${PROGRAM}: src/proxy.c inc/definitions.h inc/log.h
-	gcc ${CFLAGS} src/proxy.c ${LDFLAGS} -o ${PROGRAM}
+SRC=src/proxy.c \
+	src/url_filtering.c \
+    src/content_filtering.c
+
+INC=inc/log.h \
+	inc/definitions.h \
+	inc/url_filtering.h \
+	inc/content_filtering.h
+
+${PROGRAM}: ${INC} ${SRC}
+	gcc ${CFLAGS} ${SRC} ${LDFLAGS} -o ${PROGRAM}
 
 clean:
 	rm -rf ${PROGRAM}
